# jackal_kinova_simulator

./: README.md
jackal_kinova_gazebo/: CMakeLists.txt  package.xml
jackal_kinova_gazebo/config/: control.yaml  control_multi.yaml  gripper_action_controller_parameters.yaml  robot_localization.yaml
jackal_kinova_gazebo/launch/: HRI_lab.launch  control.launch  control_multi.launch  description.launch  description_multi.launch  empty_world.launch  fake_localization.launch  fake_localization_with_ns.launch  mteleop.launch  multi_test_world.launch  rl_control.launch  rl_description.launch  rl_description_with_ns.launch  rl_empty_world.launch  rl_spawn_jackal.launch  rl_spawn_jackal_with_ns.launch  spawn_jackal.launch  spawn_jackal_multi.launch  teleop.launch  test_world.launch  test_world_2nd.launch  with_AR.launch
jackal_kinova_gazebo/urdf/: accessories.urdf.xacro  gen3_lite_gen3_lite_2f.xacro  jackal.gazebo  jackal.urdf.xacro  jackal_base.urdf.xacro  jackal_base_with_ns.urdf.xacro  jackal_kinova.urdf.xacro  jackal_kinova_with_ns.urdf.xacro  jackal_with_ns.gazebo  jackal_with_ns.urdf.xacro  kortex_robot.xacro  model.sdf  model.urdf
jackal_kinova_gazebo/urdf/accessories/: bridge_plate.urdf.xacro  camera_mount.urdf.xacro  hdl32_mount.urdf.xacro  hokuyo_utm30.urdf.xacro  novatel_smart6.urdf.xacro  novatel_smart7.urdf.xacro  sick_lms1xx_inverted_mount.urdf.xacro  sick_lms1xx_upright_mount.urdf.xacro
jackal_kinova_gazebo/urdf/gen3_lite/6dof/urdf/: gen3_lite_macro.xacro
jackal_kinova_gazebo/urdf/gen3_lite_2f/urdf/: gen3_lite_2f_macro.xacro
jackal_kinova_gazebo/urdf/include/: d435.urdf.xacro  m_d435.urdf.xacro  m_tim571.urdf.xacro  tim571.urdf.xacro
jackal_kinova_gazebo/worlds/: can.world  final_rooms.world  hakjunv5.world  lab_6by9_no_obst.world  lab_6by9_obst_1.world  lab_6by9_obst_3.world  lab_6x8.world  learning_world.world  learning_world_4.world  obst_4_6by9.world  obst_8by15.world  unit_rooms.world
jackal_kinova_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
jackal_kinova_moveit_config/config/: jackal_kinova.srdf  jackal_kinova.srdf.xacro  sensors_3d.yaml
jackal_kinova_moveit_config/launch/: Omni_control.launch  chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gen3_lite_gen3_lite_2f_moveit_controller_manager.launch.xml  mOmni_control.launch  momni_JK_01.rviz  momni_JK_02.rviz  move_group.launch  moveit_rviz.launch  multi_control.launch  omni.rviz  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  rl_rviz.rviz  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
jackal_kinova_moveit_config/scripts/: control_example.py  home_robot.py
jackal_kinova_nav_without_map/: CMakeLists.txt  package.xml
jackal_kinova_nav_without_map/config/: costmap_common.yaml  planner.yaml
jackal_kinova_nav_without_map/launch/: execution_without_map.launch  move_base.launch
jackal_kinova_nav_without_map/params/: base_local_planner_params.yaml  move_base_params.yaml  (+1 more)
jackal_kinova_navigation/: CMakeLists.txt  package.xml
kortex_driver/: package.xml
(+29 files in other folders)
