<?xml version="1.0"?>
<package format="2">

  <name>jackal_kinova_moveit_config</name>
  <version>2.2.2</version>
  <description>
     A Package with all the configuration and launch files for using the gen3_lite_gen3_lite_2f and jackal with the MoveIt! Motion Planning Framework
  </description>
  <author email="p1112007@khu.ac.kr">Sungwoo Yang</author>
  <maintainer email="p1112007@khu.ac.kr">Sungwoo Yang</maintainer>

  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>kortex_driver</build_depend>
  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>moveit_fake_controller_manager</exec_depend>
  <exec_depend>moveit_kinematics</exec_depend>
  <exec_depend>moveit_planners_ompl</exec_depend>
  <exec_depend>moveit_ros_visualization</exec_depend>
  <exec_depend>moveit_setup_assistant</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>kortex_driver</exec_depend>
  <exec_depend>xacro</exec_depend>
  <!-- This package is referenced in the warehouse launch files, but does not build out of the box at the moment. Commented the dependency until this works. -->
  <!-- <exec_depend>warehouse_ros_mongo</exec_depend> -->


</package>
